--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs",
+  "name": "Tatarian Kitchen",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,19 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroui/button": "^2.2.24",
+    "@heroui/form": "^2.1.24",
+    "@heroui/input": "^2.4.25",
+    "@heroui/modal": "^2.2.21",
+    "@heroui/navbar": "^2.2.22",
+    "@heroui/react": "^2.8.2",
+    "@heroui/system": "^2.4.20",
+    "@heroui/theme": "^2.4.20",
+    "framer-motion": "^12.23.12",
+    "motion": "^12.23.12",
+    "next": "15.4.6",
+    "postcss": "^8.5.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.4.6"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4.1.12",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4.1.12",
+    "typescript": "^5"
   }
 }
