--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.10.0",
     "@heroui/button": "^2.2.24",
     "@heroui/form": "^2.1.24",
     "@heroui/input": "^2.4.25",
@@ -17,12 +18,23 @@
     "@heroui/react": "^2.8.2",
     "@heroui/system": "^2.4.20",
     "@heroui/theme": "^2.4.20",
+    "@prisma/client": "^6.14.0",
+    "@prisma/extension-accelerate": "^2.0.2",
+    "@types/dompurify": "^3.0.5",
+    "bcryptjs": "^3.0.2",
+    "dompurify": "^3.2.6",
     "framer-motion": "^12.23.12",
+    "html-react-parser": "^5.2.6",
+    "isomorphic-dompurify": "^2.26.0",
     "motion": "^12.23.12",
     "next": "15.4.6",
+    "next-auth": "^5.0.0-beta.29",
     "postcss": "^8.5.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-hot-toast": "^2.6.0",
+    "zod": "^4.0.17",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -32,6 +44,8 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
+    "prettier": "^3.6.2",
+    "prisma": "^6.14.0",
     "tailwindcss": "^4.1.12",
     "typescript": "^5"
   }
